--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+html, body  .root{
+  height: 100%;
+  width: 100%;
+}
+
+:root {
+  --fonte: 'Inter', sans-serif;
+  --branco: #FFFFFF;
+  --preto: #000000;
+  --roxo-meteora: #9353FF;
+  --verde-meteora: #DAFF01;
+  --fundo-mobile: #343A40; 
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
