inicio do modal mostrando detalhes do produto

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html, body  .root{
   --roxo-meteora: #9353FF;
   --verde-meteora: #DAFF01;
   --fundo-mobile: #343A40; 
+  --cinza-claro: #ADB5BD; 
 }
 
 body {
