--- a/src/components/ProductsPage/ProductsPage.module.css
+++ b/src/components/ProductsPage/ProductsPage.module.css
@@ -51,3 +51,31 @@ h3 {
       margin-left: 0;
     }
 }
+
+.categories h3 {
+    font-family: var(--fonte);
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.categories__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.88rem;
+}
+
+.categories__cards img {
+   width: auto;
+}
+
+@media (min-width: 700px) and (max-width: 922px) {
+    .categories h3 {
+        font-size: 1.75rem;
+}
+
+    .categories__cards img{
+        width: 13rem;
+    }
+}
