--- a/src/components/Newsletter/Newsletter.module.css
+++ b/src/components/Newsletter/Newsletter.module.css
@@ -5,6 +5,8 @@
     border: 2px solid #000;
     padding: 2.5rem;
     margin: 2.5rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 .newsletter__subscription {
@@ -32,7 +34,8 @@
 
 @media screen and (max-width: 665px) {
     .newsletter__input__email  {
-        width: 8rem;
+        width: 10rem;
+        height: 2rem;
     }
 
     .newsletter {
