--- a/src/components/ProductsPage/ProductsPage.module.css
+++ b/src/components/ProductsPage/ProductsPage.module.css
@@ -3,6 +3,8 @@ h3 {
     font-size: 2rem;
     font-weight: 500;
     text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .products {
